examples/hello-world/java/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-java
  namespace: apps
spec:
  selector:
    app: hello-java
  ports:
    - port: 80
      targetPort: 8080
